@@ -16,7 +16,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.14
+Release: 0.15
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -496,6 +496,12 @@ exit 0
 %{__prefix}/include/popt.h
 
 %changelog
+* Sun Dec  1 2002 Jeff Johnson <jbj@redhat.com> 4.2-0.15
+- link rpm libraries together, use shared helpers with external -lelf.
+- move libfmagic to librpmio.
+- use libtool-1.4.3, autoconf-2.56.
+- add explicit -L/lib64 -L/usr/lib64 for libtool mode=relink on x86_64.
+
 * Sat Nov 30 2002 Jeff Johnson <jbj@redhat.com> 4.2-0.14
 - upgrade to elfutils-0.63.
 
