@@ -26,7 +26,7 @@ lib_LTLIBRARIES = librpmio.la
 librpmio_la_SOURCES = digest.c fts.c macro.c \
 	rpmio.c rpmlog.c rpmmalloc.c \
 	rpmpgp.c rpmrpc.c strcasecmp.c stubs.c url.c ugid.c
-librpmio_la_LDFLAGS = -release @VERSION@ @WITH_ZLIB_LIB@ -lrt -lpthread
+librpmio_la_LDFLAGS = -release @VERSION@ @HACK_LIBTOOLPATH@ $(top_builddir)/file/libfmagic.la @WITH_ZLIB_LIB@ -lrt -lpthread
 librpmio_la_LIBADD = $(BEECRYPTLOBJS)
 librpmio_la_DEPENDENCIES = .created
 
